k8s/frontend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  labels:
    app: frontend
spec:
  selector:
    app: frontend
  ports:
  - port: 3001
    targetPort: 3001
    nodePort: 30001
    name: http
  type: LoadBalancer
